--- a/src/Busybee/People/FamilyBundle/Resources/config/Settings/Settings_0_0_02.yml
+++ b/src/Busybee/People/FamilyBundle/Resources/config/Settings/Settings_0_0_02.yml
@@ -155,19 +155,19 @@ Org.Logo:
     displayName: 'Organisation Logo'
     description: 'The organisation Logo'
     role: 'ROLE_ADMIN'
-    validator: 'validator.logo'
+    validator: 'busybee_core_template.validator.logo'
 Org.Logo.Transparent:
     type: 'image'
     displayName: 'Organisation Transparent Logo'
     description: 'The organisation Logo in a transparent form.  Recommended to be 80% opacity. Only PNG or GIF image formats support transparency.'
     role: 'ROLE_ADMIN'
-    validator: 'validator.logo'
+    validator: 'busybee_core_template.validator.logo'
 Background.Image:
     type: 'image'
     displayName: 'Background Image'
     description: 'Change the background displayed for the site.  The image needs to be a minimum of 1200px width.  You can load an image of 1M size, but the smaller the size the better.'
     role: 'ROLE_ADMIN'
-    validator: 'validator.background.image'
+    validator: 'busybee_core_template.validator.background_image'
 SchoolDay.Open:
     type: 'time'
     displayName: 'School Day Open Time'
